<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvHowMany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_many_players_text"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tvAppName"
        android:layout_marginTop="70dp"
        android:textSize="24sp"
        />

    <Spinner
        android:id="@+id/spinnerNoPlayer"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvHowMany"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_border"
        />

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:text="@string/next"
        android:ems="5"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:background="@color/greenCol"
        />

</RelativeLayout>